News UAT/force-app/main/default/objects/Booking_c__x/Booking_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Booking__c</externalName>
    <label>NRM Booking</label>
    <pluralLabel>NRM Bookings</pluralLabel>
</CustomObject>