News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_Billing_Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Postal_Code_c__c</fullName>
    <externalDeveloperName>Account_Billing_Postal_Code__c</externalDeveloperName>
    <label>Account Billing Postal Code</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>