News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_c__c</fullName>
    <externalDeveloperName>Account_ID__c</externalDeveloperName>
    <label>Account ID</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
</CustomField>