News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_Last_Insertion_date_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Insertion_date_c__c</fullName>
    <externalDeveloperName>Account_Last_Insertion_date__c</externalDeveloperName>
    <label>Account Last Insertion date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>