News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_Link_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Link_c__c</fullName>
    <externalDeveloperName>Account_Link__c</externalDeveloperName>
    <label>Account</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>NRM Bookings</relationshipLabel>
    <relationshipName>NRM_Bookings</relationshipName>
    <type>ExternalLookup</type>
</CustomField>