News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_c__c</fullName>
    <externalDeveloperName>Account_Owner__c</externalDeveloperName>
    <label>Account Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>