News UAT/force-app/main/default/objects/Booking_c__x/fields/Account_Record_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_c__c</fullName>
    <externalDeveloperName>Account_Record_Type__c</externalDeveloperName>
    <label>Account Record Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>