News UAT/force-app/main/default/objects/Booking_c__x/fields/Ad_Size_c__c.field-meta.xml
<CustomField>
    <fullName>Ad_Size_c__c</fullName>
    <externalDeveloperName>Ad_Size__c</externalDeveloperName>
    <label>Ad Size</label>
    <length>64</length>
    <type>Text</type>
</CustomField>