News UAT/force-app/main/default/objects/Booking_c__x/fields/APN_Last_Activity_Date_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Last_Activity_Date_c__c</fullName>
    <externalDeveloperName>APN_Last_Activity_Date__c</externalDeveloperName>
    <label>APN Last Activity Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>