News UAT/force-app/main/default/objects/Booking_c__x/fields/Booked_By_c__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_c__c</fullName>
    <externalDeveloperName>Booked_By__c</externalDeveloperName>
    <label>Booked By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>