News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Contact_c__c</fullName>
    <externalDeveloperName>Booking_Contact__c</externalDeveloperName>
    <label>Booking Contact</label>
    <length>75</length>
    <type>Text</type>
</CustomField>