News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_created_date_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_created_date_c__c</fullName>
    <externalDeveloperName>Booking_created_date__c</externalDeveloperName>
    <label>XXXBooking created date</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>