News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_ID_Key_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID_Key_c__c</fullName>
    <externalDeveloperName>Booking_ID_Key__c</externalDeveloperName>
    <label>Booking ID Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>