News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number_c__c</fullName>
    <externalDeveloperName>Booking_Number__c</externalDeveloperName>
    <label>Booking Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>