News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_On_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_On_Hold_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Booking_On_Hold__c</externalDeveloperName>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>