News UAT/force-app/main/default/objects/Booking_c__x/fields/Booking_Resolicited_c__c.field-meta.xml
<CustomField>
    <fullName>Booking_Resolicited_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Booking_Resolicited__c</externalDeveloperName>
    <label>Booking Resolicited</label>
    <type>Checkbox</type>
</CustomField>