News UAT/force-app/main/default/objects/Booking_c__x/fields/Business_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_c__c</fullName>
    <externalDeveloperName>Business_Phone__c</externalDeveloperName>
    <label>Business Phone</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>