News UAT/force-app/main/default/objects/Booking_c__x/fields/Call_Result_c__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_c__c</fullName>
    <externalDeveloperName>Call_Result__c</externalDeveloperName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Already Rebooked</fullName>
            </value>
            <value>
                <fullName>Auto-Renewed</fullName>
            </value>
            <value>
                <fullName>Call Back Later</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>N/A for Resolicitation</fullName>
            </value>
            <value>
                <fullName>No Sale</fullName>
            </value>
            <value>
                <fullName>Opportunity Logged</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>