News UAT/force-app/main/default/objects/Booking_c__x/fields/Campaign_c__c.field-meta.xml
<CustomField>
    <fullName>Campaign_c__c</fullName>
    <externalDeveloperName>Campaign__c</externalDeveloperName>
    <label>Campaign</label>
    <length>30</length>
    <type>Text</type>
</CustomField>