News UAT/force-app/main/default/objects/Booking_c__x/fields/Cancelled_c__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Cancelled__c</externalDeveloperName>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>