News UAT/force-app/main/default/objects/Booking_c__x/fields/Caption_c__c.field-meta.xml
<CustomField>
    <fullName>Caption_c__c</fullName>
    <externalDeveloperName>Caption__c</externalDeveloperName>
    <label>Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>