News UAT/force-app/main/default/objects/Booking_c__x/fields/Classification_c__c.field-meta.xml
<CustomField>
    <fullName>Classification_c__c</fullName>
    <externalDeveloperName>Classification__c</externalDeveloperName>
    <label>Classification</label>
    <length>64</length>
    <type>Text</type>
</CustomField>