News UAT/force-app/main/default/objects/Booking_c__x/fields/Classified_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Classified_Account_Manager_c__c</fullName>
    <externalDeveloperName>Classified_Account_Manager__c</externalDeveloperName>
    <label>Classified Account Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>