News UAT/force-app/main/default/objects/Booking_c__x/fields/Colour_c__c.field-meta.xml
<CustomField>
    <fullName>Colour_c__c</fullName>
    <externalDeveloperName>Colour__c</externalDeveloperName>
    <label>Colour</label>
    <length>32</length>
    <type>Text</type>
</CustomField>