News UAT/force-app/main/default/objects/Booking_c__x/fields/Colour_Percentage_c__c.field-meta.xml
<CustomField>
    <fullName>Colour_Percentage_c__c</fullName>
    <externalDeveloperName>Colour_Percentage__c</externalDeveloperName>
    <label>Colour Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>