News UAT/force-app/main/default/objects/Booking_c__x/fields/Credit_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_c__c</fullName>
    <externalDeveloperName>Credit_Status__c</externalDeveloperName>
    <label>Credit Status</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>