News UAT/force-app/main/default/objects/Booking_c__x/fields/Cyber_Creation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Creation_Date_c__c</fullName>
    <externalDeveloperName>Cyber_Creation_Date__c</externalDeveloperName>
    <label>Cyber Creation Date</label>
    <type>DateTime</type>
</CustomField>