News UAT/force-app/main/default/objects/Booking_c__x/fields/Date_Cancelled_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled_c__c</fullName>
    <externalDeveloperName>Date_Cancelled__c</externalDeveloperName>
    <label>Date Cancelled</label>
    <type>Date</type>
</CustomField>