News UAT/force-app/main/default/objects/Booking_c__x/fields/Date_Resolicited_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolicited_c__c</fullName>
    <externalDeveloperName>Date_Resolicited__c</externalDeveloperName>
    <label>Date Resolicited</label>
    <type>Date</type>
</CustomField>