News UAT/force-app/main/default/objects/Booking_c__x/fields/Expired_c__c.field-meta.xml
<CustomField>
    <fullName>Expired_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Expired__c</externalDeveloperName>
    <label>Expired</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>