News UAT/force-app/main/default/objects/Booking_c__x/fields/First_Insertion_c__c.field-meta.xml
<CustomField>
    <fullName>First_Insertion_c__c</fullName>
    <externalDeveloperName>First_Insertion__c</externalDeveloperName>
    <label>Booking First Insertion</label>
    <type>Date</type>
</CustomField>