News UAT/force-app/main/default/objects/Booking_c__x/fields/Follow_Up_Date_and_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date_and_Time_c__c</fullName>
    <externalDeveloperName>Follow_Up_Date_and_Time__c</externalDeveloperName>
    <label>Follow-Up Date and Time</label>
    <type>DateTime</type>
</CustomField>