News UAT/force-app/main/default/objects/Booking_c__x/fields/Follow_Up_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Description_c__c</fullName>
    <externalDeveloperName>Follow_Up_Description__c</externalDeveloperName>
    <label>Follow-Up Description</label>
    <type>TextArea</type>
</CustomField>