News UAT/force-app/main/default/objects/Booking_c__x/fields/Follow_Up_Subject_c__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Subject_c__c</fullName>
    <externalDeveloperName>Follow_Up_Subject__c</externalDeveloperName>
    <label>Follow-Up Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>