News UAT/force-app/main/default/objects/Booking_c__x/fields/Is_PP_Booking_c__c.field-meta.xml
<CustomField>
    <fullName>Is_PP_Booking_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_PP_Booking__c</externalDeveloperName>
    <label>Is PP Booking</label>
    <type>Checkbox</type>
</CustomField>