News UAT/force-app/main/default/objects/Booking_c__x/fields/Last_Insertion_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Insertion_c__c</fullName>
    <externalDeveloperName>Last_Insertion__c</externalDeveloperName>
    <label>Booking Last Insertion</label>
    <type>Date</type>
</CustomField>