News UAT/force-app/main/default/objects/Booking_c__x/fields/LastIntegrationDate_c__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDate_c__c</fullName>
    <externalDeveloperName>LastIntegrationDate__c</externalDeveloperName>
    <label>LastIntegrationDate</label>
    <type>DateTime</type>
</CustomField>