News UAT/force-app/main/default/objects/Booking_c__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Bookings</relationshipLabel>
    <relationshipName>NRM_Bookings2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>