News UAT/force-app/main/default/objects/Booking_c__x/fields/Local_or_National_Booking_c__c.field-meta.xml
<CustomField>
    <fullName>Local_or_National_Booking_c__c</fullName>
    <externalDeveloperName>Local_or_National_Booking__c</externalDeveloperName>
    <label>Local or National Booking</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>