News UAT/force-app/main/default/objects/Booking_c__x/fields/No_Sale_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>No_Sale_Reason_c__c</fullName>
    <externalDeveloperName>No_Sale_Reason__c</externalDeveloperName>
    <label>&quot;No Sale&quot; Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Elsewhere</fullName>
            </value>
            <value>
                <fullName>Business Closing</fullName>
            </value>
            <value>
                <fullName>Credit/QA Issue</fullName>
            </value>
            <value>
                <fullName>Item Sold/Position Filled</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>On Holiday</fullName>
            </value>
            <value>
                <fullName>Too Busy</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unable To Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>