News UAT/force-app/main/default/objects/Booking_c__x/fields/Original_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_c__c</fullName>
    <externalDeveloperName>Original_Account__c</externalDeveloperName>
    <label>Original Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>