News UAT/force-app/main/default/objects/Booking_c__x/fields/Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_c__c</fullName>
    <externalDeveloperName>Phone__c</externalDeveloperName>
    <label>Phone</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>