News UAT/force-app/main/default/objects/Booking_c__x/fields/Pillar_c__c.field-meta.xml
<CustomField>
    <fullName>Pillar_c__c</fullName>
    <externalDeveloperName>Pillar__c</externalDeveloperName>
    <label>Pillar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>