News UAT/force-app/main/default/objects/Booking_c__x/fields/Price_c__c.field-meta.xml
<CustomField>
    <fullName>Price_c__c</fullName>
    <externalDeveloperName>Price__c</externalDeveloperName>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>