News UAT/force-app/main/default/objects/Booking_c__x/fields/Resold_New_Booking_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Resold_New_Booking_Number_c__c</fullName>
    <externalDeveloperName>Resold_New_Booking_Number__c</externalDeveloperName>
    <label>Resold New Booking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>