News UAT/force-app/main/default/objects/Booking_c__x/fields/Resolicitation_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Resolicitation_Comments_c__c</fullName>
    <externalDeveloperName>Resolicitation_Comments__c</externalDeveloperName>
    <label>Resolicitation Comments</label>
    <type>TextArea</type>
</CustomField>