News UAT/force-app/main/default/objects/Booking_c__x/fields/Resolicitation_Follow_Up_c__c.field-meta.xml
<CustomField>
    <fullName>Resolicitation_Follow_Up_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Resolicitation_Follow_Up__c</externalDeveloperName>
    <label>Resolicitation Follow-Up</label>
    <type>Checkbox</type>
</CustomField>