News UAT/force-app/main/default/objects/Booking_c__x/fields/Resolicitation_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Resolicitation_Value_c__c</fullName>
    <externalDeveloperName>Resolicitation_Value__c</externalDeveloperName>
    <label>Resolicitation Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>