News UAT/force-app/main/default/objects/Booking_c__x/fields/Resolicited_By_c__c.field-meta.xml
<CustomField>
    <fullName>Resolicited_By_c__c</fullName>
    <externalDeveloperName>Resolicited_By__c</externalDeveloperName>
    <label>Resolicited By</label>
    <length>55</length>
    <type>Text</type>
</CustomField>