News UAT/force-app/main/default/objects/Booking_c__x/fields/Sales_Rep_Full_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Full_Name_c__c</fullName>
    <externalDeveloperName>Sales_Rep_Full_Name__c</externalDeveloperName>
    <label>Sales Rep Full Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>