News UAT/force-app/main/default/objects/Booking_c__x/fields/Sales_Rep_is_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_is_Active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Sales_Rep_is_Active__c</externalDeveloperName>
    <label>Sales Rep is Active</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>