News UAT/force-app/main/default/objects/Booking_c__x/fields/Schedule_c__c.field-meta.xml
<CustomField>
    <fullName>Schedule_c__c</fullName>
    <externalDeveloperName>Schedule__c</externalDeveloperName>
    <label>Schedule</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>