News UAT/force-app/main/default/objects/Booking_c__x/fields/Size_Discount_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Size_Discount_Level_c__c</fullName>
    <externalDeveloperName>Size_Discount_Level__c</externalDeveloperName>
    <label>Size Discount Level</label>
    <length>64</length>
    <type>Text</type>
</CustomField>