News UAT/force-app/main/default/objects/Booking_c__x/fields/Specialist_Media_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Media_Account_Manager_c__c</fullName>
    <externalDeveloperName>Specialist_Media_Account_Manager__c</externalDeveloperName>
    <label>Specialist Media Account Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>