News UAT/force-app/main/default/objects/Booking_c__x/fields/Sub_Booking_Last_Insertion_c__c.field-meta.xml
<CustomField>
    <fullName>Sub_Booking_Last_Insertion_c__c</fullName>
    <externalDeveloperName>Sub_Booking_Last_Insertion__c</externalDeveloperName>
    <label>Sub Booking Last Insertion</label>
    <type>Date</type>
</CustomField>