News UAT/force-app/main/default/objects/Booking_c__x/fields/Web_Upsell_c__c.field-meta.xml
<CustomField>
    <fullName>Web_Upsell_c__c</fullName>
    <externalDeveloperName>Web_Upsell__c</externalDeveloperName>
    <label>Web Upsell</label>
    <length>25</length>
    <type>Text</type>
</CustomField>