News UAT/force-app/main/default/objects/Booking_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Booking_Number_c__c</columns>
    <columns>Account_Link_c__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Id</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>